--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="shortcut icon" href="./icons/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.min.css">
+    <script src="./bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
     <script src="./script.js" defer></script>
     <title>My Portfolio</title>
 </head>
@@ -44,17 +47,21 @@
 
                 <div class="col-lg-6 text-white mt-3" id="abt-text">
                     <p class="h3 display-6" id="abt-head">About Me</p>
-                    I'm an intermediate level frontend web developer, designer & programmer. I'm capable of making web
-                    sites and pages with responsive design and I can make them attractive too. My skill areas are:
+                    I'm an intermediate level frontend web developer, designer & programmer. I'm capable of making
+                    interactive web sites and pages with responsive design and I can make them attractive too. My skill
+                    areas are:
                     <ul id="skill-list">
-                        <li>Frontend Web Development.</li>
-                        <li>HTML Forms.</li>
-                        <li>Landing Pages.</li>
-                        <li>Javascript and Node.js.</li>
-                        <li>CSS - Bootstrap, SCSS.</li>
-                        <li>Web Game Development.</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                        <li>SCSS</li>
+                        <li>Landing Pages</li>
+                        <li>Forms</li>
+                        <li>Javascript</li>
+                        <li>Node JS</li>
+                        <li>Electron JS</li>
+                        <li>Web Game Development</li>
                         <li>Phaser JS</li>
-                        <li>C# console applications.</li>
                     </ul>
                 </div>
 
