--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <link rel="shortcut icon" href="./icons/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <script src="./bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
+<!--     <link rel="stylesheet" href="./bootstrap-5.3.3-dist/css/bootstrap.min.css"> -->
+<!--     <script src="./bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./script.js" defer></script>
     <title>My Portfolio</title>
 </head>
@@ -147,7 +147,7 @@
                 <a href="https://www.freecodecamp.org/Michael_9" target="_blank">
                     <img class="ffc foot-icon" src="./icons/free-code-camp.svg">
                 </a>
-                <a href="www.linkedin.com/in/michael-megafu-248666283" target="_blank">
+                <a href="https://www.linkedin.com/in/michael-megafu-248666283" target="_blank">
                     <img class="linkedin foot-icon" src="./icons/linkedin.svg">
                 </a>
             </div>
